tests/ui/not-clone-closure.stderr
error[E0277]: the trait `Clone` is not implemented for `{closure@$DIR/not-clone-closure.rs:7:17: 7:24}` in `{closure@$DIR/not-clone-closure.rs:7:17: 7:24}`
  --> $DIR/not-clone-closure.rs:11:23
   |
LL |     let hello = move || {
   |                 ------- within this `{closure@$DIR/not-clone-closure.rs:7:17: 7:24}`
...
LL |     let hello = hello.clone();
   |                       ^^^^^ within `{closure@$DIR/not-clone-closure.rs:7:17: 7:24}`, the trait `Clone` is not implemented for closure `{closure@$DIR/not-clone-closure.rs:7:17: 7:24}`, which is required by `{closure@$DIR/not-clone-closure.rs:7:17: 7:24}: Clone`
   |
note: required because it's used within this closure
  --> $DIR/not-clone-closure.rs:7:17
   |
LL |     let hello = move || {
   |                 ^^^^^^^
help: use parentheses to call this closure
   |
LL |     let hello = hello().clone();
   |                      ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
